--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,13 +26,19 @@
     {
       "path": "#source/verification.kit",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"verification.html\",\"autoCompile\":true,\"compiler-kit\":{\"enabled\":true}}"
+    },
+    {
+      "path": "#source\\сup.kit",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"сup.html\",\"autoCompile\":true,\"compiler-kit\":{\"enabled\":true}}"
+    },
+    {
+      "path": "#source/cup.kit",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"cup.html\",\"autoCompile\":true,\"compiler-kit\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "#source",
-      "#source/js",
-      "#source/scss"
+      "#source"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -69,7 +75,12 @@
         "#source/scss/ui/_mixins.scss",
         "#source/scss/ui/_fonts.scss",
         "#source/scss/_vars.scss",
+        "#source/scss/ui/_btn.scss",
         "#source/scss/blocks/_form.scss",
+        "#source/scss/blocks/_profil.scss",
+        "#source/scss/blocks/_cabinet-nav.scss",
+        "#source/scss/blocks/_verification.scss",
+        "#source/scss/blocks/_cup.scss",
         "#source/scss/blocks/_header.scss"
       ]
     },
@@ -89,6 +100,20 @@
     },
     {
       "path": "#source/verification.kit",
+      "imports": [
+        "#source/html/header.html",
+        "#source/html/iu/js.html"
+      ]
+    },
+    {
+      "path": "#source\\сup.kit",
+      "imports": [
+        "#source/html/header.html",
+        "#source/html/iu/js.html"
+      ]
+    },
+    {
+      "path": "#source/cup.kit",
       "imports": [
         "#source/html/header.html",
         "#source/html/iu/js.html"
