--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,6 +34,14 @@
     {
       "path": "#source/cup.kit",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"cup.html\",\"autoCompile\":true,\"compiler-kit\":{\"enabled\":true}}"
+    },
+    {
+      "path": "#source/register.kit",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"register.html\",\"autoCompile\":true,\"compiler-kit\":{\"enabled\":true}}"
+    },
+    {
+      "path": "#source/login.kit",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"login.html\",\"autoCompile\":true,\"compiler-kit\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -65,6 +73,7 @@
       "imports": [
         "#source/js/jq-start.js",
         "#source/js/components/form.js",
+        "#source/js/components/dynamic_adapt.js",
         "#source/js/script.js",
         "#source/js/jq-end.js"
       ]
@@ -77,11 +86,14 @@
         "#source/scss/_vars.scss",
         "#source/scss/ui/_btn.scss",
         "#source/scss/blocks/_form.scss",
+        "#source/scss/blocks/_form-login.scss",
         "#source/scss/blocks/_profil.scss",
         "#source/scss/blocks/_cabinet-nav.scss",
         "#source/scss/blocks/_verification.scss",
         "#source/scss/blocks/_cup.scss",
-        "#source/scss/blocks/_header.scss"
+        "#source/scss/blocks/_header.scss",
+        "#source/scss/blocks/_header-login.scss",
+        "#source/scss/blocks/_login.scss"
       ]
     },
     {
@@ -116,6 +128,20 @@
       "path": "#source/cup.kit",
       "imports": [
         "#source/html/header.html",
+        "#source/html/iu/js.html"
+      ]
+    },
+    {
+      "path": "#source/login.kit",
+      "imports": [
+        "#source/html/header-login.html",
+        "#source/html/iu/js.html"
+      ]
+    },
+    {
+      "path": "#source/register.kit",
+      "imports": [
+        "#source/html/header-login.html",
         "#source/html/iu/js.html"
       ]
     }
